<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DS_HmiUserStatus" Id="{9ddd02aa-458c-4521-b3cc-69d5df6861e4}">
    <Declaration><![CDATA[TYPE DS_HmiUserStatus :
STRUCT
	
	bActivatedFlag 		: BOOL;
	sLoginName			: STRING;	// User Management - New User Login Name
	sUserGroupId		: INT;		// User Management - Select from UserGroupList

	sOperatorIdentifier	: STRING;
	eActorType			: eActor;
	sULastName			: STRING;
	sFirstName			: STRING;	
	tsDateTime			: TIMESTRUCT;
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>